# pixelmatch-rs

./: .gitignore  Cargo.toml  README.md
benchmark/: benchmark.js  d8.js  index.html  init.js  lodash.min.js  node.js  package.json  pixelmatch.js  pixelmatch_simd_wasm_bg.wasm  platform.js  resize.mjs  simd.js  test.js  web.js  without.js
examples/: example.rs
examples/node/cjs/: index.cjs  package.json
examples/node/esm/: index.mjs  package.json
examples/vite/: index.html  package.json  vite.config.ts
examples/vite/src/: main.ts
examples/webpack/: index.js  package.json  webpack.config.js
fixtures/: 006a  006b
pixelmatch/: Cargo.toml
pixelmatch-shared/: Cargo.toml
pixelmatch-shared/src/: lib.rs
pixelmatch-simd-wasm/: .npmignore  Cargo.toml  LISENCE  README.md  index.d.ts  index.js  package.json
pixelmatch-simd-wasm/common/esm/: index.js
pixelmatch-simd-wasm/node/cjs/: index.cjs
pixelmatch-simd-wasm/node/esm/: index.mjs
pixelmatch-simd-wasm/src/: lib.rs
pixelmatch-simd-wasm/test/node/: index.test.cjs  index.test.mjs
pixelmatch-simd-wasm/web/: index.js
pixelmatch-wasm/: Cargo.toml  README.md  package.json
pixelmatch-wasm/node/cjs/: index.cjs
pixelmatch-wasm/node/esm/: index.mjs
pixelmatch-wasm/src/: a.js  lib.rs
pixelmatch/examples/: example.rs
pixelmatch/src/: lib.rs
src/: lib.rs
