[package]
name = "pixelmatch-simd-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
pixelmatch_shared = { path = "../pixelmatch-shared" }
wasm-bindgen = "0.2.83"

[dev-dependencies]
wasm-bindgen-test = "0.3.33"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false