[package]
name = "pixelmatch-rs"
version = "0.1.0"
authors = ["bokuweb <bokuweb12@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pixelmatch"
path = "src/lib.rs"

[dependencies]


[dev-dependencies]
image = "0.20"